--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # Files
-NEO-Classification/Temporary.csv
-NEO-Classification/*iew.txt
+Asteroid-Risk-Classification/Temporary.csv
+Asteroid-Risk-Classification/*iew.txt
