--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Files
 Asteroid-Risk-Classification/Temporary.csv
 Asteroid-Risk-Classification/*iew.txt
+Asteroid-Risk-Classification/Datasets.txt
+Asteroid-Risk-Classification/datasets/aa_asteroid_diameter_neo_pha.csv
+Asteroid-Risk-Classification/datasets/ac_dataset_neo_pha.csv
 
 # Folders
